# ten-more-bullets-sdl

./: CMakeLists.txt  Makefile  README.md
include/: bullet.h  color.h  game.h  gun.h  key_press.h  rectangle.h  utils.h
src/: game.cpp  gun.cpp  key_press.cpp  main.cpp  rectangle.cpp  utils.cpp
